--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "cookie-parser": "1.4.3",
     "bootstrap": "^3.3.7",
+    "cookie-parser": "1.4.3",
+    "cookie-session": "^1.3.0",
     "dotenv": "^2.0.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
